--- a/Application/index.html
+++ b/Application/index.html
@@ -114,12 +114,12 @@
           type="date"
           id="TO"
           name="TO"
-          class="input-calendar input input-edit-calendar"
+          class="input-calendar input input-edit-calendar input-edit"
         />
         <select
           id="menu"
           name="menu"
-          class="input input-menu input-edit-dropdown"
+          class="input input-menu input-edit-dropdown input-edit"
         >
           <option value="Ток">Ток</option>
           <option value="Вода">Вода</option>
@@ -131,7 +131,7 @@
         <input
           type="text"
           placeholder="0"
-          class="input input-price input-edit-price"
+          class="input input-price input-edit-price input-edit"
         />
       </div>
       <div class="buttons-edit">
